<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <TextView
        android:id="@+id/tv_dashboard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_title"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#6200EE"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_subjects"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="40dp"/>

    <Button
        android:id="@+id/btn_subjects"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_subjects"
        android:backgroundTint="#6200EE"
        app:layout_constraintTop_toBottomOf="@+id/tv_dashboard_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_profile"/>

    <Button
        android:id="@+id/btn_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_profile"
        android:backgroundTint="#03DAC5"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_subjects"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_logout"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout"
        android:backgroundTint="#B00020"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>