<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <TextView
        android:id="@+id/tv_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#6200EE"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_profile_name"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:id="@+id/tv_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_name"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_profile_course"/>

    <TextView
        android:id="@+id/tv_profile_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_course"
        android:textSize="20sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_back_profile"/>

    <Button
        android:id="@+id/btn_back_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"
        android:backgroundTint="#6200EE"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_course"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>